# libbilinear

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/: .gitignore  2017-06-28-miracl-bench.md  2017-06-28-miracl-curves.md  2017-06-29-miracl-pairing-bench.md  2017-06-30-relic-prelim-bench.md
libbilinear/: CMakeLists.txt
libbilinear/app/: CMakeLists.txt  PlayApp.cpp
libbilinear/bench/: CMakeLists.txt  FastMultExpBench.cpp  RelicMicroBench.cpp
libbilinear/include/bilinear/: FastMultExp.h  Groups.h  Library.h  PublicParameters.h  Relic.h
libbilinear/include/bilinear/internal/: Main.h
libbilinear/lib/: .gitignore  CMakeLists.txt  Main.cpp
libbilinear/src/: CMakeLists.txt  FastMultExp.cpp  Groups.cpp  Library.cpp  NotImplementedException.h  PublicParameters.cpp
libbilinear/test/: BasicViabilityTest.cpp  CMakeLists.txt  ElementSizesTest.cpp  SerializeTest.cpp
scripts/linux/: cmake.sh  gen-eclipse-project.sh  install-deps.sh  install-relic.sh  install.sh  make.sh  relic-preset-chia.sh  set-env.sh  test.sh
scripts/linux/shlibs/: check-env.sh  os.sh
